@@ -1,3 +1,5 @@
+2377.	[bug]		Address race condition in dnssec-signzone. [RT #18142]
+
 2376.	[bug]		Change #2144 was not complete.
 
 2375.	[security]	Fully randomize UDP query ports to improve
